--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,7 @@ dkms.conf
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 .build/*
+
+# Doxygen HTML Documentation
+./docs/html
+./docs/html/*
